update hero sizing and spacing, additional style tweaks for services section, nav spacing fixes, backgrounds for page container and footer as well as body

--- a/src/styles/components/_home-services.scss
+++ b/src/styles/components/_home-services.scss
@@ -9,7 +9,7 @@
     }
 
     @media (min-width: $breakpoint-lg) {
-      grid-template-columns: $grid-4col;
+      grid-template-columns: $grid-3col;
     }
 
     .service {
