--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -5,6 +5,7 @@ footer {
   text-align: center;
   // color: $colour-beige;
   color: $colour-dark-blue;
+  background: $colour-dark-blue;
   // background: rgba(49, 55, 63, 0.5);
   // backdrop-filter: blur(1px);
   border-radius: $border-radius-lg $border-radius-lg 0 0;
@@ -35,8 +36,8 @@ footer {
         svg {
           width: 20px;
           height: auto;
-          // fill: $colour-beige;
-          fill: $colour-dark-blue;
+          fill: $white;
+          // fill: $colour-dark-blue;
           transition: all 0.3s ease-in-out;
         }
         &:hover {
@@ -49,7 +50,8 @@ footer {
 
     .copyright {
       margin-top: 48px;
-      color: $colour-dark-blue;
+      color: $white;
+      // color: $colour-dark-blue;
 
       small {
         font-size: 0.875rem;
